--- a/Chat_demo/pubspec.yaml
+++ b/Chat_demo/pubspec.yaml
@@ -30,13 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
+
   http: ^0.13.5
   connectivity_plus: ^4.0.1
   uuid: ^3.0.6
   intl: ^0.18.0
-
+  sqflite: ^2.3.0
+  path: ^1.9.0
+  path_provider: ^2.1.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -44,6 +45,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+ 
 
   build_runner: ^2.4.4
 
